2004-11-01  Callum McKenzie  <callum@physics.otago.ac.nz>

	* mahjongg.c (stop_hints): Fix the fix. It now works for cases
	other than just "New Game".
	(stop_hints): New, new, improved, improved, fix.

2004-10-31  Callum McKenzie  <callum@physics.otago.ac.nz>

	* mahjongg.c (stop_hints): Set timeout_counter directly to
	HINT_BLINK_NUM rather than repeatedly calling hint_callback to
	increment it.

2004-10-30  Richard Hoelscher  <rah@rahga.com>

	* mahjongg.c (stop_hints): Run down the hint timeout, called from
	callbacks for new, restart, shuffle, undo, redo, and pause.

2004-10-13  Callum McKenzie  <callum@physics.otago.ac.nz>

	* mahjongg.c: Fix up the restart sensitivity and make sure that
	the redo command doesn't do a quick set insensitive/ set sensitive
	on the redo button.

	* help/C/mahjongg.xml: Update docs to reflect the lack of a seed.

	* mahjongg.c: Remove the seed, both the UI and all the internal
	mechanisms. Also removed the old "confirm_action" multiplexer in
	favour of individual callbacks now that we don't confirm actions.

2004-09-26  Richard Hoelscher  <rah@rahga.com>

	* drawing.c (load_images): Unref the old tilepixbuf on theme change.

2004-09-15  callum  <callum@spooky-possum.org>

	* mahjongg.c (mapset_changed_cb): Remove whitespace before punctuation.

2004-09-09  callum  <callum@spooky-possum.org>

	* help/C/figures/*.png:
	* help/C/mahjongg.xml: Update for 2.8.

2004-08-26  callum  <callum@spooky-possum.org>

	* mahjongg.c: Be explicit about the game_over enumeration starting
	at 0, we make assumptions about this and while most modern
	compilers should be OK, I have a bug (#145543) which I think is a
	result of this assumption failing.

2004-08-24  Richard Hoelscher  <rahga@localhost.localdomain>

	* drawing.c (configure_pixmaps): Recreate tile images only when 
	the tileset changed, or if tile size changed after window resize.

2004-08-15  Callum McKenzie  <callum@physics.otago.ac.nz>

	* maya.png: